deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: info-app
  template:
    metadata:
      labels:
        app: info-app
    spec:
      containers:
        - name: info-app
          image: sakuraocha/info-app:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-app
  namespace: customer-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: info-app
  template:
    metadata:
      labels:
        app: info-app
    spec:
      containers:
        - name: info-app
          image: sakuraocha/info-app:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
  namespace: customer-1
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-app
  namespace: customer-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: info-app
  template:
    metadata:
      labels:
        app: info-app
    spec:
      containers:
        - name: info-app
          image: sakuraocha/info-app:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
  namespace: customer-2
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
